<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentRelative"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    tools:context=".ui.activity.RegisterActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="341dp"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="640dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        tools:layout_editor_absoluteY="76dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/buat_akun_kamu"
            android:textAlignment="center"
            android:textColor="@color/blue_700"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/nama_pengguna"
            android:textSize="16sp" />

        <com.capstone.fishku.ui.customview.MyEditTextName
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            android:textSize="16sp" />

        <com.capstone.fishku.ui.customview.MyEditTextEmail
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/nomor"
            android:textSize="16sp" />

        <com.capstone.fishku.ui.customview.MyEditPhoneNumber
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/alamat"
            android:textSize="16sp" />

        <com.capstone.fishku.ui.customview.MyEditTextAddress
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tv_sandi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/kata_sandi"
            android:textSize="16sp" />

        <com.capstone.fishku.ui.customview.MyEditTextPassword
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:passwordToggleEnabled="true"
            android:inputType="textPassword"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <com.capstone.fishku.ui.customview.MyButtonRegister
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/bergabung"
            android:textColor="#795548" />

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/sudah_punya_akun"
            android:textColor="@color/blue_700"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>