<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.OrderDetailActivity">

    <TextView
        android:id="@+id/tv_nama_penjual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/nama_penjual"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nama_ikan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/nama_ikan"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_nama_penjual"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_nama_penjual"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_penjual" />

    <TextView
        android:id="@+id/tv_nama_penjualnya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="26dp"
        android:text="@string/nama_penjual"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tv_nama_penjual"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_harga_ikan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:text="@string/harga"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tv_nama_ikan"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_penjualnya" />

    <TextView
        android:id="@+id/tv_catatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/detail_alamat"
        android:textColor="@color/blue_700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_nama_ikan"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_ikan" />

    <EditText
        android:id="@+id/tambah_catatan"
        android:layout_width="372dp"
        android:layout_height="104dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border"
        android:gravity="top"
        android:hint="@string/tulis_alamat_lengkap"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="3"
        android:padding="32dp"
        android:textColorHint="@color/grey_700"
        app:layout_constraintStart_toStartOf="@+id/tv_catatan"
        app:layout_constraintTop_toBottomOf="@+id/tv_catatan"
        tools:ignore="TextContrastCheck" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        app:layout_constraintTop_toBottomOf="@+id/tambah_catatan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:text="@string/total_harga"
                android:textColor="@color/blue_700"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_harga"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="@string/harga"
                android:textColor="@color/blue_700"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/grey_700"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_cod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pembayaran"
                android:textColor="@color/grey_700"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pesan"
                tools:ignore="TextContrastCheck"
                android:textColor="@color/white"
                android:background="@drawable/bg_btn_blue_700"/>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>