<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentRelative"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    tools:context=".ui.activity.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="341dp"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="546dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        tools:layout_editor_absoluteY="90dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/masuk_akun"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/blue_700" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/email"
            android:textSize="16sp" />

        <com.capstone.fishku.ui.customview.MyEditTextEmail
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tv_sandi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/kata_sandi"
            android:textSize="16sp" />

        <com.capstone.fishku.ui.customview.MyEditTextPassword
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"/>

        <com.capstone.fishku.ui.customview.MyButtonLogin
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/masuk"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/tidak_punya_akun"
            android:textColor="@color/blue_700"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>